<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stocks_app">原厂设置</string>
    <string name="zte_mi_pop_title">屏幕助手（Mi-Pop）</string>
    <string name="zte_mi_pop_summary">原厂自带的屏幕助手,能够代替三大金刚按键.</string>
    <string name="app_name">高级设置</string>
    <string name="action_settings">设置</string>
    <string name="title_section1">个性</string>
    <string name="title_section2">音效</string>
    <string name="title_section3">工具</string>
    <string name="hello_world">你好,世界!</string>
    <string name="title_system">系统</string>
    <string name="switch_title">开关</string>
    <string name="title_sound">其他</string>
    <string name="title_about">关于</string>
    <string name="quick_boot_title">快速开机</string>
    <string name="quick_boot_summary">使用原厂官方提供的快速5秒开机,可加快开机速度.</string>
    <string name="eng_mode_title">工程模式</string>
    <string name="eng_mode_summary">适合熟手玩家自行调整系统参数</string>
    <string name="time_switch_machine_title">定时开关机</string>
    <string name="time_switch_machine_summary">根据个人需求设置手机自动开关机</string>
    <string name="camera_title">相机</string>
    <string name="camera_sound_title">拍照声音</string>
    <string name="camera_sound_summary">asd</string>
    <string name="camera_focus_title">对焦声音(需重启相机)</string>
    <string name="camera_focus_summary">asdd</string>
    <string name="camera_shutter_title">连拍声音</string>
    <string name="camera_shutter_summary">asd</string>
    <string name="video_sound_title">录像声音</string>
    <string name="video_sound_summary">关闭录像声音</string>
    <string name="dolby_sound_title">杜比音效</string>
    <string name="dolby_sound_summary">点击进入杜比音效控制面板</string>
    <string name="sure_restart">您确定要快速重启手机吗？</string>
    <string name="storage_title">默认存储器</string>
    <string name="ex_sdcard">外置SD卡</string>
    <string name="in_sdcard">内置SD卡</string>
    <string name="auto">系统自动</string>
    <string name="reboot_confirm">现在必须重启整个系统以生效切换</string>
    <string name="rec_confirm">重启到恢复模式吗？</string>
    <string name="reboot_ok">重启</string>
    <string name="now">现在：</string>
    <string name="reboot_cancel">取消</string>
    <string name="crt_title">CRT旧电视特效</string>
    <string name="crt_summary">打开谷歌原生CRT旧电视特效.</string>
    <string name="other_title">关于</string>
    <string name="quick_restart_title">快速重启手机</string>
    <string name="quick_restart_summary">点此可以迅速重启手机</string>
    <string name="author_title">作者：</string>
    <string name="author_summary">点此访问我的新浪微博，可以反馈问题等等。</string>
    <string name="miuisettings">状态栏</string>
    <string name="not_found_app">无法找到对应的软件或运行出错</string>
    <string name="t1">开机音乐</string>
    <string name="t2">关机音乐</string>
    <string name="t3">电源管理</string>
    <string name="t4">重启到恢复模式</string>
    <string name="t5">点击此处可重启到Recovery模式</string>
    <string name="t6">设置完成!</string>
    <string name="app_version_number">3975150088</string>
    <string name="bbs_about">百度云OS论坛</string>
    <string name="bbs_about_summary">点击进入百度云OS官方论坛，成为百度云的一份子！</string>
</resources>
