<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="小工具" />
        <Preference android:title="夏新工具箱" android:summary="夏新工具箱,一键安装,启动项管理" >
            <intent android:targetPackage="com.amoi.amoitools" android:action="android.intent.action.MAIN" android:targetClass="com.amoi.amoitools.AmoiToolsActivity" />
        </Preference>
    <PreferenceCategory android:title="@string/t3" />
    <Preference android:persistent="false" android:title="@string/quick_restart_title" android:key="quick_restart" android:summary="@string/quick_restart_summary" />
    <Preference android:persistent="false" android:title="@string/t4" android:key="rec" android:summary="@string/t5" />
    <PreferenceCategory android:title="@string/other_title" />
    <Preference android:title="JKwan_嘉豪仔" android:key="weibo" android:summary="专业打脸30年.点击进入我的微博">
        <intent android:action="android.intent.action.VIEW" android:data="http://www.weibo.com/kwangaho" />
    </Preference>
    <Preference android:title="@string/bbs_about" android:key="bbs" android:summary="@string/bbs_about_summary">
        <intent android:action="android.intent.action.VIEW" android:data="http://bbs.os.baidu.com" />
    </Preference>
</PreferenceScreen>
